--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.jetbrains.handson.chat.server.ApplicationKt.module ]
+        modules = [ okita.popbubble.server.ApplicationKt.module ]
     }
 }
